@@ -64,6 +64,7 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc8226.suite',
      'tests.test_rfc8410.suite',
      'tests.test_rfc8418.suite',
+     'tests.test_rfc8494.suite',
      'tests.test_rfc8520.suite',
      'tests.test_rfc8619.suite',
      'tests.test_rfc8649.suite']
