@@ -31,6 +31,7 @@ Revision 0.2.7, released XX-09-2019
 - Added RFC5934 providing Trust Anchor Management Protocol (TAMP)
 - Added RFC6210 providing Experiment for Hash Functions with Parameters
 - Added RFC5751 providing S/MIME Version 3.2 Message Specification
+- Added RFC8494 providing Multicast Email (MULE) over ACP 142
 
 Revision 0.2.6, released 31-07-2019
 -----------------------------------
